--- a/podfile
+++ b/podfile
@@ -8,5 +8,7 @@ target 'Quiz-Time' do
 	pod 'Firebase/Core'
 	pod 'Firebase/Auth'
 	pod 'SnapKit'
+	pod 'GoogleSignIn'
+    pod 'SVProgressHUD'
 
 end
