--- a/podfile
+++ b/podfile
@@ -7,6 +7,7 @@ target 'Quiz-Time' do
   # Pods for Quiz-Time
 	pod 'Firebase/Core'
 	pod 'Firebase/Auth'
+    pod 'Firebase/Database'
 	pod 'SnapKit'
 	pod 'GoogleSignIn'
     pod 'SVProgressHUD'
